<resources>
    <string name="app_name">Procop</string>
    <string name="hello_world">Hello world</string>

    <!--Validation Error Messages start-->
    <string name="error_message_date_validation">Invalid data format</string>
    <string name="error_message_id_validation">The value should be between 13 and 15 characters.</string>
    <string name="error_message_regex_validation">Invalid format</string>
    <string name="error_message_email_validation">Invalid Email format</string>
    <string name="error_message_phone_email_validation">Invalid Email or Phone format</string>
    <string name="error_message_first_name_validation">Invalid first name format</string>
    <string name="error_message_last_name_validation">Invalid last name format</string>
    <string name="error_message_cpf_validation">Invalid CPF format</string>
    <string name="error_message_url_validation">Invalid url format</string>
    <string name="error_message_credit_card_validation">Invalid Credit Card format</string>
    <string name="error_message_empty_validation">This field can\'t be empty</string>
    <string name="error_message_not_equal_password">Passwords are not the same</string>
    <string name="error_message_not_equal_phone">Mobile No are not the same</string>
    <string name="default_required_validation_message">This field is required.</string>
    <string name="error_message_postal_address">Postal Address is not valid</string>
    <string name="default_required_length_message_min_max">The input must have length between %1$d
        and %2$d.
    </string>
    <string name="default_required_length_message_min">The input length must be greater than
        or equal to %1$d characters.
    </string>
    <string name="default_required_length_message_max">The input length must be less than or
        equal to %1$d characters.
    </string>
    <string name="default_regex_validation_message">The field value does not match the
        required format.
    </string>

    <string name="error_passcode_sequence">Passcode cannot be a straight sequence</string>
    <string name="error_passcode_same_digits">Passcode cannot be of same digits</string>
    <string name="login">Login</string>
    <string name="enter_your_username_or_email">Enter your username or email</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_desc">Forgot your password ? Please enter your username or email address. You will receive a link by email to create a new password.</string>
    <string name="identification_email">Identification email</string>

    <string name="screen_about_text_title">About</string>
    <string name="screen_about_creative_title">We believe everyone is creative</string>
    <string name="screen_about_creative_description">Many confuse creativity as something you either have or don\'t have. As human beings, our minds are capable of capturing the imagination and turning abstract thoughts into ideas.\nAt PROCOP, we believe that everyone can create and that creativity is something we can nurture and encourage, because every child is born an artist.</string>
    <string name="screen_about_heading_2_title">With the right papers, resources and inspiration</string>
    <string name="screen_about_heading_2_description">PROCOP ensures that in everything we do, the support we provide can help and serve you. We are committed to supporting you by providing what you need on your journey to becoming the best version of yourself.</string>

    <string name="screen_password_update_success_title">Password Updated!</string>
    <string name="screen_password_update_success_description">Your password has been changed successfully!</string>

    <string name="common_ok">OK</string>
    <string name="common_description">Description</string>
    <string name="common_checkout_button_title">Checkout</string>
    <string name="common_send">Send</string>
    <string name="common_favourite_title">Favourite</string>
    <string name="common_add_to_cart">Add to cart</string>
    <string name="common_remove_to_cart">Added to Cart</string>
    <string name="common_product_added_to_cart">The product is added to the cart</string>
    <string name="common_product_removed_from_cart">The product is removed from the cart</string>
    <string name="common_search">Search</string>
    <string name="common_total_title">Total</string>
    <string name="common_language_changed">Application Language successfully changed to </string>

    <string name="screen_billing_address_first_name">First name </string>
    <string name="screen_billing_address_last_name">Last name </string>
    <string name="screen_billing_address_email">Email </string>
    <string name="screen_billing_address_country_region">Country/region </string>
    <string name="screen_billing_address_street_number_and_name">Street number and name </string>
    <string name="screen_billing_address_lane_number_and_street_name_hint">Lane number and street name</string>
    <string name="screen_billing_address_building_apartment_lot_etch_optional_title">Building, apartment, lot, etch (optional)</string>
    <string name="screen_billing_address_zip_code_title">Zip Code </string>
    <string name="screen_billing_address_city_name_title">City name </string>
    <string name="screen_billing_address_phone_no_title">Phone no </string>
    <string name="screen_billing_address_company_name_optional_title">Company name ( optional)</string>

    <string name="screen_payment_credit_card">Credit Card</string>
    <string name="screen_payment_paypal">PayPal</string>
    <string name="screen_payment_card_number_title">"Card number "</string>
    <string name="screen_payment_card_title_hint">******</string>
    <string name="screen_payment_date_title">"Date "</string>
    <string name="screen_payment_title_hint">**/**</string>
    <string name="screen_payment_cvv_title">"CVV "</string>
    <string name="screen_payment_cvv_hint">***</string>
    <string name="screen_payment_pay_title">Pay</string>

    <string name="screen_cart_text_title">Cart</string>
    <string name="screen_cart_apply_title">Apply</string>
    <string name="screen_contact_us_you_have_questions_title">You Have Questions?</string>
    <string name="screen_contact_us_heading_description">We are available Monday to Friday!</string>
    <string name="screen_contact_us_phone">+33 (0)5 55 06 41 70</string>
    <string name="screen_contact_us_email">Contact@Procop.Fr</string>
    <string name="screen_contact_us_timing">Monday – Friday: 9:00 a.m. – 6:00 p.m.</string>
    <string name="screen_contact_us_write_us">Write Us</string>
    <string name="screen_contact_us_your_name">Your name</string>
    <string name="screen_contact_us_topic">Topic</string>
    <string name="screen_contact_us_type_message">Type message…</string>

    <string name="screen_home_category_1802_color">COLOR _1802</string>
    <string name="screen_home_category_nouveaut_gmund_used">NOUVEAUTÉ GMUND USED</string>
    <string name="screen_home_category_papier_offset">PAPIER OFFSET</string>
    <string name="screen_home_category_papier_num_rique">PAPIER NUMÉRIQUE</string>
    <string name="screen_home_category_nuanciers">NUANCIERS</string>
    <string name="screen_home_category_offres_en_cours">OFFRES EN COURS</string>
    <string name="screen_home_category_offres_en_cours_v2">News</string>

    <string name="screen_order_success_title">Your Order has been\nplaced successfully!</string>
    <string name="screen_order_success_description">You can check your order process\nin my orders sections</string>
    <string name="screen_order_my_orders_button_title">My Orders</string>
    <string name="screen_orders_no_orders_title">There are no orders yet.</string>
    <string name="screen_orders_shop_now_button_title">SHOP NOW</string>
    <string name="screen_product_filters_choose_category">Category</string>
    <string name="screen_product_filters_choose_sub_category">Sub-category</string>
    <string name="screen_product_filters_color">Color</string>
    <string name="screen_product_filters_brands">Brands</string>
    <string name="screen_product_filters_thickness">Thickness</string>
    <string name="screen_product_filters_filter">Filter</string>

    <string name="screen_profile_billing_info">Billing info</string>
    <string name="screen_profile_first_name">First Name</string>
    <string name="screen_profile_street_number_and_name">Street number and name</string>
    <string name="screen_profile_phone">Phone</string>
    <string name="screen_profile_company_name">Company name</string>

    <string name="screen_settings_change_password">Change password</string>
    <string name="screen_settings_language">Language</string>
    <string name="screen_settings_english">English</string>

    <string name="layout_category_item_all">All</string>
    <string name="layout_drawer_menu_item_home">Home</string>
    <string name="layout_drawer_menu_item_my_orders">Orders</string>
    <string name="layout_drawer_menu_item_profile">Profile</string>
    <string name="layout_drawer_menu_item_settings">Settings</string>
    <string name="layout_drawer_menu_item_faq">FAQ</string>
    <string name="layout_drawer_menu_item_about">About</string>
    <string name="layout_drawer_menu_item_contact">Contact</string>
    <string name="layout_drawer_menu_item_logout">Logout</string>
    <string name="layout_order_item_payment">Payment</string>
    <string name="layout_order_item_payment_mode">Payment mode</string>
    <string name="layout_order_item_status">Status</string>
    <string name="layout_order_item_give_review">Give Review</string>
    <string name="layout_product_fav_add_to_cart">Add to cart</string>
    <string name="billing_address">Billing Address</string>
    <string name="company">Company</string>
    <string name="individual">Individual</string>
    <string name="num_siret">Num. Siret</string>
    <string name="tva_intra_communautaire">Intra-community VAT:</string>
    <string name="payment_methods">Payment methods</string>
    <string name="bank_transfer">Bank transfer (PROCOP Account)</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="price_unavailable">unavailable</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_hint">Type name here</string>
    <string name="please_choose_from_the_list">Please choose from the list</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="error_title">Error</string>
    <string name="language_french">Français</string>
    <string name="language_english">English</string>
</resources>