<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.androidstarter.ui.filter.ProductFilterVM" />

        <variable
            name="viewState"
            type="com.androidstarter.ui.filter.ProductFilterState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/screen_product_filters_filter"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> viewModel.handlePressOnView(v.id)}"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView"
            app:srcCompat="@drawable/ic_cross" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/filterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closeBtn">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <TextView
                    android:id="@+id/searchProduct"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/product_name"
                    android:textColor="@color/appBlack"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/searchBar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/input_field"
                    android:editable="false"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:gravity="center_vertical"
                    android:hint="@string/product_name_hint"
                    android:inputType="text"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@={viewState.search}"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/searchProduct" />

                <TextView
                    android:id="@+id/categories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/screen_product_filters_choose_category"
                    android:textColor="@color/appBlack"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/searchBar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/catSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:fontFamily="@font/poppins"
                    android:gravity="center_vertical"
                    android:onClick="@{(v) -> viewModel.handlePressOnView(v.id)}"
                    android:orientation="horizontal"
                    android:text="@string/please_choose_from_the_list"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categories" />

                <TextView
                    android:id="@+id/subCategories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/screen_product_filters_choose_sub_category"
                    android:textColor="@color/appBlack"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/catSpinner" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/subCatSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:fontFamily="@font/poppins"
                    android:gravity="center_vertical"
                    android:onClick="@{(v) -> viewModel.handlePressOnView(v.id)}"
                    android:orientation="horizontal"
                    android:text="@string/please_choose_from_the_list"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subCategories" />

                <TextView
                    android:id="@+id/colors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/screen_product_filters_color"
                    android:textColor="@color/appBlack"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subCatSpinner" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/colorsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/colors"
                    app:spanCount="4"
                    tools:listitem="@layout/layout_color_item" />

                <TextView
                    android:id="@+id/brands"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/screen_product_filters_brands"
                    android:textColor="@color/appBlack"
                    android:textSize="17sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/colorsRecyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/brandsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:scrollbars="none"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/brands"
                    app:spanCount="3"
                    tools:listitem="@layout/layout_category_item" />

                <TextView
                    android:id="@+id/thickness"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/screen_product_filters_thickness"
                    android:textColor="@color/appBlack"
                    android:textSize="17sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/brandsRecyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/thicknessRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:scrollbars="none"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/thickness"
                    app:spanCount="3"
                    tools:listitem="@layout/layout_category_item" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/filterButton"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_back_pink"
            android:enabled="@{viewState.filterApplied}"
            android:fontFamily="@font/poppins"
            android:onClick="@{(v) -> viewModel.handlePressOnView(v.id)}"
            android:text="@string/screen_product_filters_filter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>