<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewState"
            type="com.androidstarter.ui.forgotpass.ForgotPasswordState" />

        <variable
            name="viewModel"
            type="com.androidstarter.ui.forgotpass.ForgotPasswordVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="96dp"
                    android:layout_height="86dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/procoplogoblack1" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/forgot_password_desc"
                    android:textColor="@color/appBlack"
                    android:textSize="13.5sp"
                    app:layout_constraintEnd_toEndOf="@+id/forgotPassEmail"
                    app:layout_constraintStart_toStartOf="@+id/forgotPassEmail"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgotPassEmail"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="37dp"
                    android:layout_marginEnd="45dp"
                    android:background="@drawable/input_field"
                    android:drawableStart="@drawable/emailicon"
                    android:drawablePadding="13dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/identification_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="18dp"
                    android:paddingEnd="18dp"
                    android:textColorHint="@color/appGrey"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/resetPassBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_back_pink"
                    android:fontFamily="@font/poppins"
                    android:onClick="@{(v) -> viewModel.handlePressOnView(v.id)}"
                    android:text="@string/reset_password"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/forgotPassEmail"
                    app:layout_constraintStart_toStartOf="@+id/forgotPassEmail"
                    app:layout_constraintTop_toBottomOf="@+id/forgotPassEmail"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>