<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.androidstarter.ui.settings.SettingsVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">

        <RelativeLayout
            android:id="@+id/tab1"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/btn"
                android:fontFamily="@font/poppins"
                android:paddingStart="7dp"
                android:text="@string/screen_settings_change_password"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/btn"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="2dp"
                android:padding="1dp"
                app:srcCompat="@drawable/forward_icon" />

        </RelativeLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:background="@color/appLightGrey"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/tab1"
            app:layout_constraintStart_toStartOf="@+id/tab1"
            app:layout_constraintTop_toBottomOf="@+id/tab1" />

        <RelativeLayout
            android:id="@+id/tab2"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="11dp"
                android:layout_toStartOf="@id/languageSpinner"
                android:fontFamily="@font/poppins"
                android:paddingStart="7dp"
                android:text="@string/screen_settings_language"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/languageSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/poppins"
                android:text="@string/screen_settings_english"
                android:textAlignment="center"
                android:textColor="@color/appGrey"
                android:textSize="13.5sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>